
ADD_LIBRARY(${PROJECT_NAME}_library
    Events/EventTypes.cpp
    Fault.cpp
    EventsThread.cpp
    MainEventsLoop.cpp
    PingPong.cpp
    RealSense/RealSenseD400.cpp
    WebSocket/WebSocketCom.cpp
)

ADD_LIBRARY(${PROJECT_NAME}_library_gpu
    RealSense/SaveRawData.cpp
)


#ds main executable (pthread is used for the GUI thread)
ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)

TARGET_COMPILE_FEATURES(${PROJECT_NAME} PUBLIC cxx_std_11)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES CUDA_SEPERABLE_COMPILATION ON)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES} )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC jetracer_library jetracer_library_gpu ${REALSENSE2_FOUND} ${CUDART_LIBRARY} -pthread)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}_library PUBLIC ${REALSENSE2_FOUND} -pthread)
# TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}_library PUBLIC external)
SET_TARGET_PROPERTIES(${PROJECT_NAME}_library PROPERTIES POSITION_INDEPENDENT_CODE ON)
SET_TARGET_PROPERTIES(${PROJECT_NAME}_library PROPERTIES CUDA_SEPERABLE_COMPILATION ON)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}_library_gpu PUBLIC jetracer_library ${REALSENSE2_FOUND} ${CUDART_LIBRARY} nvjpeg -pthread)
SET_TARGET_PROPERTIES(${PROJECT_NAME}_library_gpu PROPERTIES POSITION_INDEPENDENT_CODE ON)
SET_TARGET_PROPERTIES(${PROJECT_NAME}_library_gpu PROPERTIES CUDA_SEPERABLE_COMPILATION ON)
SET_SOURCE_FILES_PROPERTIES(${jetracer_library_gpu} PROPERTIES LANGUAGE CUDA)


INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/external")
